Fix API connection issues and improve error handling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <p>请输入以下配置信息，以便使用AI学习助手</p>
             <form id="configForm">
                 <div class="form-group">
+                    <label for="doubaoApiUrl">豆包API地址：</label>
+                    <input type="text" id="doubaoApiUrl" placeholder="例如：https://ark.cn-beijing.volces.com/api/v3/chat/completions" required>
+                </div>
+                <div class="form-group">
                     <label for="doubaoApiKey">豆包API密钥：</label>
                     <input type="password" id="doubaoApiKey" placeholder="请输入豆包API密钥" required>
                 </div>
