--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <form id="configForm">
                 <div class="form-group">
                     <label for="doubaoApiUrl">豆包API地址：</label>
-                    <input type="text" id="doubaoApiUrl" placeholder="例如：https://ark.cn-beijing.volces.com/api/v3/chat/completions" required>
+                    <input type="text" id="doubaoApiUrl" placeholder="例如：https://ark.cn-beijing.volces.com/api/v3/chat/completions" required value="https://ark.cn-beijing.volces.com/api/v3/chat/completions">
                 </div>
                 <div class="form-group">
                     <label for="doubaoApiKey">豆包API密钥：</label>
-                    <input type="password" id="doubaoApiKey" placeholder="请输入豆包API密钥" required>
+                    <input type="password" id="doubaoApiKey" placeholder="请输入豆包API密钥" required autocomplete="new-password">
                 </div>
                 <div class="form-group">
                     <label for="notionApiToken">Notion API Token：</label>
-                    <input type="password" id="notionApiToken" placeholder="请输入Notion API Token" required>
+                    <input type="password" id="notionApiToken" placeholder="请输入Notion API Token" required autocomplete="new-password">
                 </div>
                 <div class="form-group">
                     <label for="notionDatabaseId">Notion数据库ID：</label>
