Add model name configuration and fix API calls

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                     <input type="text" id="doubaoApiUrl" placeholder="例如：https://ark.cn-beijing.volces.com/api/v3/chat/completions" required value="https://ark.cn-beijing.volces.com/api/v3/chat/completions">
                 </div>
                 <div class="form-group">
+                    <label for="doubaoModel">豆包模型名称：</label>
+                    <input type="text" id="doubaoModel" placeholder="例如：doubao-lite, doubao-pro, doubao-1.8" required value="doubao-lite">
+                </div>
+                <div class="form-group">
                     <label for="doubaoApiKey">豆包API密钥：</label>
                     <input type="password" id="doubaoApiKey" placeholder="请输入豆包API密钥" required autocomplete="new-password">
                 </div>
