Update default model to doubao-1-5-pro-32k-250115

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-group">
                     <label for="doubaoModel">豆包模型名称：</label>
-                    <input type="text" id="doubaoModel" placeholder="例如：doubao-lite, doubao-pro, doubao-1.8" required value="doubao-lite">
+                    <input type="text" id="doubaoModel" placeholder="例如：doubao-1-5-pro-32k-250115, doubao-lite, doubao-pro" required value="doubao-1-5-pro-32k-250115">
                 </div>
                 <div class="form-group">
                     <label for="doubaoApiKey">豆包API密钥：</label>
