feat: 添加Notion配置默认值并优化课程章节获取逻辑
为Notion数据库ID和代理URL添加默认配置值，方便用户快速使用
重构课程和章节获取逻辑，优先尝试直接调用Notion API，失败时使用代理或模拟数据
将学习记录数据库ID字段重命名为更清晰的notionLearningDatabaseId

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 </div>
                 <div class="form-group">
                     <label for="notionDatabaseId">Notion数据库ID：</label>
-                    <input type="text" id="notionDatabaseId" placeholder="请输入Notion数据库ID" required>
+                    <input type="text" id="notionDatabaseId" placeholder="请输入Notion数据库ID" required value="2e43af348d5780fd9b8ed286eba4c996">
                 </div>
                 <div class="form-group">
                     <label for="notionProxyUrl">Notion代理URL（可选）：</label>
-                    <input type="text" id="notionProxyUrl" placeholder="例如：https://notion-proxy.your-account.workers.dev" value="">
+                    <input type="text" id="notionProxyUrl" placeholder="例如：https://notion-proxy.your-account.workers.dev" value="https://notion-proxy.timbabys80.workers.dev/">
                 </div>
                 <div class="form-actions">
                     <button type="submit" class="submit-btn">保存配置</button>
