feat(配置): 添加GitHub Token输入框并实现对话记录保存功能
添加GitHub Token配置项，用于将对话记录保存到GitHub仓库
实现完整的GitHub API调用逻辑，包括文件存在性检查和更新机制
添加本地存储作为保存失败的备选方案

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                     <label for="notionProxyUrl">Notion代理URL（可选）：</label>
                     <input type="text" id="notionProxyUrl" placeholder="例如：https://notion-proxy.your-account.workers.dev" value="https://notion-proxy.timbabys80.workers.dev/">
                 </div>
+                <div class="form-group">
+                    <label for="githubToken">GitHub Token（可选，用于保存对话记录）：</label>
+                    <input type="password" id="githubToken" placeholder="请输入GitHub Personal Access Token" autocomplete="new-password">
+                    <small>获取方式：GitHub > Settings > Developer settings > Personal access tokens > Generate new token</small>
+                </div>
                 <div class="form-actions">
                     <button type="submit" class="submit-btn">保存配置</button>
                 </div>
